src/index.css
h1{
    font-family: 'Sacramento';
    font-size: 60px;
}

body{
    background-color: rgb(190, 185, 192);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    
}
main{
    padding: 30px 0;
    

}
.weather-boxing{
    background-color: ivory;
    max-width: 600px;
    margin: 45px auto;
    box-shadow: 0 30px 50px rgba(79, 79, 87, 0.6);
    border-radius: 16px;
    padding: 30px;
}
.weather-app-data{
    font-size: 15px;
    
}
.search-bar{
    border: none;
    border-radius: 6px;
    width:80%;
    padding:15px 15px;
    font-size: 16px;
}
.search-button{
    color: blueviolet;
    border:none;
    border-radius: 6px;
    width:18%;
    padding: 15px 20px;
    font-size: 16px;
}
.weather-info{
    color: rgb(116, 100, 119);
    
}
.weather-info strong{
    color: blueviolet;

}
.weather-app-temperature{
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 20px;
    display: flex; 
    justify-content: space-between;    
}
.weather-app-details {
    display: flex;
    justify-content: space-between;
    align-items: center; 
}



footer{
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 10px;
    text-align: center;
}

